--- a/css/nav.css
+++ b/css/nav.css
@@ -73,12 +73,12 @@ nav .mid{
 nav .right{
     width: 30%;
     position: absolute;
-    left: 70%;
+    left: 68%;
     display: inline-flex;
     padding: 4px;
 }
 nav .right .msg{
-    margin-right: 20px;
+    margin-right: 30px;
     font-size: 28px;
     color: white;
 }
@@ -130,14 +130,17 @@ nav .right .sign-in{
     padding-top: 4px;
     left: 50px;
 }
+.newMember{
+    position: absolute;
+    right: 0px;
+}
 nav .right .newMember h2{
     margin: 2px 10px 2px 40px;
     font-size: 16px;
     background-color: rgb(177, 177, 177);
     border-radius: 10px;
     padding: 6px 8px;
-    position: absolute;
-    right: 30px;
+    
 
 }
 nav .right .newMember h2:hover{
@@ -148,7 +151,66 @@ nav .right .newMember h2:hover{
 .right .sign-in a:hover{
     color: rgb(6, 204, 95);
 }
-
+#user{
+    display: flex;
+    flex-direction: row;
+    color: white;
+}
+.user{
+    position: absolute;
+    left: 15%;
+    padding: 4px 6px;
+    
+}
+.user i{
+    font-size: 22px;
+    color: rgb(255, 255, 255);
+    padding: 2px 6px;
+    margin: 0 12px;
+}
+.user .fa-caret-down{
+    font-size: 14px;
+    padding: 8px 4px;
+}
+.user-login{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.356);
+    backdrop-filter: blur(3px);
+    width: 150px;
+    height: 0;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    right: 35px;
+    overflow: hidden;
+    opacity: 0;
+    border: 2px solid black;
+    transition: height 0.2s ease-in-out;
+    z-index: 10000;
+}
+.user-login hr{
+    width: 90%;
+    background-color: black;
+    margin: 5px 7px;
+    height: 1px;
+    border: none;
+}
+.user-login a{
+    font-size: 18px;
+    padding: 8px 6px;
+    transition: 0.2s ease-in-out;
+}
+#user:hover + .user-login,
+.user-login:hover {
+    opacity: 1;
+    height: 100px;
+}
+.user-login a:hover{
+    color: rgb(27, 99, 59);
+    font-weight: 700;
+}
 /* ------------------------------------------ */
 /* artists form */
 .artists-form{
