--- a/css/index.css
+++ b/css/index.css
@@ -419,3 +419,32 @@ main{
     margin-right: 15px;
     font-size: 2rem;
 }
+
+
+/* alert */
+#success-alert{
+    width: 350px;
+    height: 180px;
+    background-color: rgb(16, 143, 65);
+    border-radius: 20px;
+    margin:50px 0 10px 47%;
+    font-size: 18px;
+    text-align: center;
+    z-index: 10001;
+    
+}
+#success-alert h3{
+    margin-top: 20px;
+}
+#success-alert h3 a{
+    background-color: rgba(6, 170, 175, 0.774);
+    color: white;
+    padding: 10px 12px;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    width: 30px;
+    border-radius: 7px;
+    text-decoration: none;
+    
+}
