--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -1,5 +1,7 @@
 body{
-    color: white;
+    font-family: "Montserrat", sans-serif;
+    background-color: rgba(12, 12, 12, 0.884);
+    overflow-x: hidden;
 }
 main{
     display: flex;
