--- a/css/aside.css
+++ b/css/aside.css
@@ -51,8 +51,6 @@
 }
 .music-img{
     width: 150px;
-    background-color: gray;
-    background-image: url(../images/mp/02.jpg);
     background-size: cover;
     position: absolute;
     height: 150px;
@@ -60,18 +58,11 @@
     top: 65%;
     border: 3px solid gray;
     transform: translate(-50%,-50%);
-    animation: bg 20s forwards infinite;
 }
-@keyframes bg{
-    0%{
-        background-image: url(../images/mp/01.jpg);
-    }
-    50%{
-        background-image: url(../images/mp/02.jpg);
-    }
-    100%{
-        background-image: url(../images/mp/03.jpg);
-    }
+.music-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .music-player{
     display: flex;
