--- a/css/nav.css
+++ b/css/nav.css
@@ -173,11 +173,13 @@ nav .right .newMember h2:hover{
     cursor: pointer;
     
 }
-.user i{
-    font-size: 22px;
-    color: rgb(255, 255, 255);
+.user #user-img{
     padding: 2px 6px;
-    margin: 0 12px;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    transform: scale(1.1);
+    object-fit: cover;
 }
 .user .fa-caret-down{
     font-size: 14px;
@@ -229,8 +231,8 @@ nav .right .newMember h2:hover{
 /* artists form */
 .artists-form{
     background-color: rgb(32, 32, 32);
-    width: 550px;
-    height: 330px;
+    width: 600px;
+    height: 360px;
     position: absolute;
     transform: translate(-50%,-50%);
     top: 55%;
@@ -239,14 +241,14 @@ nav .right .newMember h2:hover{
     z-index: 1000;
     display: none;
     transition: 0.1s ease-in-out;
-    padding: 80px 50px;
+    padding: 50px;
 
 }
 #create-heading{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 10px 30px 0;
+    margin: 10px 30px 30px;
 }
 #create-heading h2{
     font-size: 2rem;
@@ -282,13 +284,14 @@ label{
 }
 .next-btn-container{
     display: flex;
-    justify-content: end;
-    align-items: end;
-    margin: 30px 50px 10px 0;
+    justify-content: center;
+    align-items: center;
+   margin-top: 30px;
 }
 #next-btn{
-    width: 20%;
+    width: 25%;
     padding: 14px 20px;
+    text-align: center;
     background-color: rgb(13, 112, 104);
     border-radius: 7px;
     border: none;
@@ -312,8 +315,8 @@ label{
 }
 .handle-prefix {
     position: absolute;
-    left: 15%;
-    bottom: 29%;
+    left: 13%;
+    bottom: 27%;
     transform: translateY(-50%);
     color: rgb(70, 70, 70);
     font-size: 22px;
@@ -352,78 +355,6 @@ label{
     font-size: 16px;
 }
 
-/* --------------------------------------------- */
-/* uploader */
-
-
-.upload-form #upload-heading{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    color: white;
-    margin: 10px 0;
-}
-.upload-form{
-    background-color: rgb(32, 32, 32);
-    width: 550px;
-    height: 107vh;
-    position: absolute;
-    top: 20%;
-    left: 40%;
-    border-radius: 20px;
-    z-index: 1000;
-    transition: 0.1s ease-in-out;
-    padding: 40px 50px;
-    display: none;
-    
-}
-.details-box{
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    margin: 6px 0;
-}
-.upload-form label{
-    font-size: 24px;
-    padding: 3px 8px;
-}
-
-.upload-form form .details-box input,.upload-form form  .details-box textarea,#genre{
-    border-radius: 10px;
-    padding: 10px 18px;
-    border: none;
-    background-color: rgba(255, 255, 255, 0.192);
-    backdrop-filter: blur(2px);
-    font-size: 18px;
-}
-::placeholder{
-    color: black;
-    font-size: 16px;
-}
-.details-box textarea{
-    max-height: 100px;
-    max-width: 90%;
-    min-height: 100px;
-    min-width: 90%;
-}
-#genre option{
-    background-color: rgba(128, 128, 128, 0.562);
-    margin: 3px 20px;
-}
-.file-input-container {
-    position: relative;
-    width: 150px; /* Adjust width as needed */
-    height: 150px; /* Adjust height as needed */
-    border: 2px dashed #ccc; /* Dashed border */
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    margin: 20px 0;
-}
-
-/* Style the file input */
 .file-input {
     position: absolute;
     left: 0;
@@ -439,26 +370,33 @@ label{
     width: 50px; /* Adjust the size of the icon */
     height: auto;
 }
-.image-upload h2{
-    text-align: start;
+.image-upload{
+    display: flex;
+    flex-direction: row;
 }
-#sbt-btn{
+.thumbnail-image{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.thumbnail-image h2{
+    font-size: 16px;
+}
+.dashed-box{
+    border: 2px dashed #5e5e5e;
+    padding: 20px;
+    width: 120px;
+    height: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-#upload-btn{
-    margin: 10px;
-    padding: 8px 12px;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-    width: 50%;
-    font-size: 18px;
+#artist-image{
+    position: absolute;
+    right: 10%;
 }
-.upload-form.open{
-    display: block;
-}
-#upload-btn:hover{
-    background-color: rgb(184, 184, 184);
+#avenue-form{
+    display: flex;
+    flex-direction: row;
 }
