--- a/css/artist_details.css
+++ b/css/artist_details.css
@@ -62,25 +62,33 @@ body{
     font-size: 2rem;
 }
 .songs-list img{
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
     object-fit: cover;
     margin-left: 30px;
-    overflow: hidden;
+    position: relative;
+    right: 30px;
+    transition: 0.2s ease-in-out;
 }
 .hover-image{
-
-    border-radius: 10px;
+    overflow: hidden;
+    border-radius: 6px;
+    width: 60px;
+    height: 60px;
 }
 .play-btn{
     position: absolute;
-    left: 17%;
+    left: 13.5%;
     top: 21px;
     opacity: 0;
     transition: 0.2s ease-in-out;
     
+    
 
+}
+.play-btn:hover{
+    cursor: pointer;
 }
 .play-btn i{
     font-size: 32px;
@@ -88,7 +96,7 @@ body{
     transition: 0.2s ease-in-out;
 }
 .hover-image:hover img{
-    filter: brightness(1.2) grayscale(0.5) blur(1px);
+    filter: brightness(0.3) grayscale(0.5) blur(1px);
     transform: scale(1.2);
 }
 .hover-image:hover .play-btn{
@@ -149,7 +157,7 @@ body{
     align-items: center;
     justify-content: center;
 }
-.play-now span{
+.play-now a{
     color: rgb(10, 145, 82);
     font-size: 18px;
     padding: 4px 6px;
