--- a/css/search_results.css
+++ b/css/search_results.css
@@ -1,10 +1,16 @@
+body{
+    font-family: "Montserrat", sans-serif;
+    background-color: rgba(12, 12, 12, 0.884);
+    overflow-x: hidden;
+}
 main{
     margin-top: 50px;
     background-image: url(../images/bg2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 200vh;
+    height: auto;
     display: flex;
+    min-height: 93vh;
 }
 .search-results-container{
     margin-left: 25%;
@@ -23,6 +29,9 @@ main{
     padding: 10px 20px;
     backdrop-filter: blur(2px);
     box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.514);
+}
+.search-result:last-child{
+    margin-bottom: 30px;
 }
 .search-result:first-child{
     margin-top: 40px;
@@ -54,22 +63,23 @@ main{
     margin-top: 8px;
     text-align: justify;
 }
-.search-result .song-details h3{
-    margin-top: 10px;
+.search-result .song-details .play-now{
+    margin-top: 50px;
     text-align: center;
     border-radius: 10px;
-    background-color: gray;
+    background-color: rgb(201, 201, 201);
     padding: 10px 8px;
-    width: 32%;
-    font-size: 20px;
+    width: 36%;
+    font-size: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: 0.2s ease-in-out;
+
 }
 .search-result h3 i{
     margin-right: 10px;
-    font-size: 22px;
+    font-size: 28px;
     color: rgb(0, 128, 58);
 
 }
@@ -82,13 +92,41 @@ main{
 }
 .search-result h3:hover{
     background-color: black;
+    cursor: pointer;
+
 }
 .search-result h3:hover span{
-    color: white;
+    color: rgb(8, 136, 104);
 
 }
 .fa-ellipsis-vertical{
     margin-left: 80px;
     font-size: 22px;
     padding: 10px 6px;
+}
+ 
+.no-data{
+    width: 600px;
+    aspect-ratio: 3/1.8;
+    left: 40%;
+    position: absolute;
+    object-fit: contain;
+}
+.no-data-text{
+    font-size: 2rem;
+    position: absolute;
+    top: 70%;
+    left: 45%;
+    color: rgb(170, 170, 170);
+    
+}
+.no-data-text h2, .no-data-text h4{
+    align-items: center;
+}
+::-webkit-scrollbar{
+    width: 12px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: rgb(90, 90, 90);
+    border-radius: 20px;
 }
