--- a/css/aside.css
+++ b/css/aside.css
@@ -18,7 +18,7 @@
 #aside .top-aside ul li{
     list-style: none;
    padding: 20px 5px 20px 30px;
-    font-size: 18px;
+    font-size: 22px;
     margin-left: 10px;
     transition: 0.3s ease-in-out;
     display: block;
@@ -30,12 +30,40 @@
 }
 #aside .top-aside ul li a i{
     margin-right: 20px;
+    color: rgb(0, 128, 79);
 }
 #aside .top-aside ul li:hover{
     background-color: rgb(61, 61, 61);
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
+.top-aside li.active {
+    border: 5px solid transparent;
+    border-radius: 10px;
+    border-left-color: rgb(6, 153, 97);
+    
+}
+.top-aside li.active a{
+    animation: glow .5s alternate infinite;
+    
+}
+@keyframes glow {
+    0% {
+        text-shadow:
+            0 0 2px rgba(4, 153, 83, 0.445),
+            0 0 4px rgba(4, 153, 83, 0.445),
+            0 0 6px rgba(4, 153, 83, 0.445);
+        filter: hue-rotate(3deg);
+    }
+    100% {
+        text-shadow: 
+        0 0 2px rgb(4, 153, 84),
+        0 0 6px rgb(4, 153, 84),
+        0 0 8px rgb(4, 153, 84);
+    filter: hue-rotate(9deg);
+    }
+}
+
 .top-aside::-webkit-scrollbar{
     width: 7px;
     
