--- a/css/nav.css
+++ b/css/nav.css
@@ -78,13 +78,13 @@ nav .mid{
     
 }
 input[type="text"]{
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 18px;
     font-weight: 600;
 }
 ::placeholder{
     padding: 0 0 0 8px;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 nav .right{
