--- a/css/nav.css
+++ b/css/nav.css
@@ -375,11 +375,15 @@ label{
     width: 100%;
     height: 100%;
 }
-
+.file-input-container{
+    width: 200px;
+    height: 100%;
+}
 /* Style the camera icon */
-.camera-icon {
-    width: 50px; /* Adjust the size of the icon */
-    height: auto;
+#profile-img {
+    width: 180px; /* Adjust the size of the icon */
+    height: 100%;
+    object-fit: cover;
 }
 .image-upload{
     display: flex;
@@ -396,9 +400,8 @@ label{
 }
 .dashed-box{
     border: 2px dashed #5e5e5e;
-    padding: 20px;
-    width: 120px;
-    height: 120px;
+    width: 200px;
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
